# auction-chess

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  TESTING.md  TODO.md  deploy-server.sh  dev.Caddyfile  package.json  pyproject.toml  railway-backend.json  railway-backend.toml  railway-frontend.json  tsconfig.json
.do/: app.yaml
backend/: .gitignore  README.md  dev.sh  pyproject.toml
backend/app/: main.py
backend/app/core/: auction_chess.py  types.py  utils.py
backend/app/core/auction_chess/: board.py  game.py  main.py  pieces.py  rules.py  types.py
backend/app/core/auction_chess/rules/: effects.py  factories.py  pieces.py
backend/app/dependencies/: auth.py  db.py  games.py  lobbies.py  test.db
backend/app/models/: models.py
backend/app/routers/: auth.py  games.py  lobbies.py  users.py  websocket.py
backend/app/schemas/: types.py
backend/app/utils/: auth.py  exceptions.py  lobbies.py
backend/testing/: create_test_users.bash
backend/testing/FastAPI/: Add User.bru  Auth Test.bru  Get Current User.bru  Get User By Username.bru  Get User.bru  Get.bru  Login.bru  create lobby.bru
frontend/: .prettierrc.json  Caddyfile  index.html  package.json  vite.config.ts
game/: main.py  pyproject.toml  setup.py
scripts/: build-edge-function.ts  deploy-client.sh  deploy-server.sh  deploy-supabase.sh
server/: .gitignore  Dockerfile  README.md  app.ts  index.ts  package.json  supabase.ts  tsconfig.json  types.ts  utils.ts
shared/: README.md  database.types.ts  index.test.ts  index.ts  package.json  tsconfig.json
src/: App.tsx  (+8 more)
(+234 files in other folders)
